Animando o botão salvar

--- a/src/app/lista-tarefas/lista-tarefas.component.html
+++ b/src/app/lista-tarefas/lista-tarefas.component.html
@@ -46,6 +46,7 @@
     </app-mensagem>
     <div class="botoes-form">
       <button
+        [@formButton]="formulario.valid ? 'valid' : 'invalid'"
         (click)="salvarTarefa()"
         class="botao-form"
         [ngClass]="habilitarBotao()"
@@ -69,7 +70,13 @@
   </div>
   <div class="busca">
     <p class="ff-prompt">Procurando o que fazer?</p>
-    <input type="search" id="campo-busca" placeholder="Busque por uma tarefa" [(ngModel)]="campoBusca" (keyup)="filtrarTarefasPorDescricao(campoBusca)">
+    <input
+      type="search"
+      id="campo-busca"
+      placeholder="Busque por uma tarefa"
+      [(ngModel)]="campoBusca"
+      (keyup)="filtrarTarefasPorDescricao(campoBusca)"
+    />
   </div>
   <div *ngIf="tarefasFiltradas.length > 0; else semTarefas">
     <div
@@ -98,7 +105,7 @@
                 : 'icone-unchecked'
             "
             (click)="finalizarTarefa(tarefa.id)"
-            [@checkButton]="tarefa.id === id ? 'checked': 'unchecked'"
+            [@checkButton]="tarefa.id === id ? 'checked' : 'unchecked'"
           ></button>
         </p>
       </div>
