--- a/src/app/lista-tarefas/lista-tarefas.component.html
+++ b/src/app/lista-tarefas/lista-tarefas.component.html
@@ -5,6 +5,7 @@
   <form
     @showState
     [@formButton]="formulario.valid ? 'valid' : 'invalid'"
+    [@shakeAnimation]="formulario.value"
     class="formulario ff-prompt"
     [formGroup]="formulario"
     *ngIf="formAberto"
@@ -25,7 +26,7 @@
       formControlName="prioridade"
       [ngClass]="campoValidado('prioridade')"
     >
-      <option disabled value="">Selecione</option>
+      <option value="">Selecione</option>
       <option value="Alta">Alta</option>
       <option value="Normal">Normal</option>
       <option value="Baixa">Baixa</option>
@@ -38,7 +39,7 @@
       formControlName="categoria"
       [ngClass]="campoValidado('categoria')"
     >
-      <option disabled value="">Selecione</option>
+      <option value="">Selecione</option>
       <option value="Casa">Casa</option>
       <option value="Trabalho">Trabalho</option>
       <option value="Estudos">Estudos</option>
@@ -47,7 +48,7 @@
     </app-mensagem>
     <div class="botoes-form">
       <button
-      id="botao-salvar"
+        id="botao-salvar"
         (click)="salvarTarefa()"
         class="botao-form"
         [ngClass]="habilitarBotao()"
